fixed margin left on mobile

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ h1 {
         margin: 5px;
     }
     .content {
-        margin-left: 0;
+        margin-left: 20px;
         padding: 10px;
         max-width: 100%;
     }
